# LhResearchAssistant

./: .gitignore  Makefile  README-PACKING.md  README.md
.github/workflows/: test.yml
backend/: .coverage  .env.example  CHANGELOG.md  alembic.ini  pack.spec  pyproject.toml  run_tests.sh
backend/alembic/: README  env.py
backend/alembic/versions/: 20260619_0001_initial_schema.py  20260620_0002_app_settings.py  20260621_0003_idea_history.py  20260621_0004_llm_usage_cache_tokens.py  20260623_0005_pdf_annotations.py
backend/app/: config.py  logs.py  main.py
backend/app/agents/: __init__.py  failure_checklist_agent.py  idea_agent.py  paper_agent.py  read_agent.py  review_agent.py  socratic_agent.py  write_agent.py
backend/app/database/: __init__.py  chroma_client.py  sqlite.py  usage_tracker.py
backend/app/llm/: __init__.py  deepseek.py  ollama.py  openai_compat.py  router.py  usage_context.py
backend/app/models/: __init__.py
backend/app/routers/: health.py  ideas.py  knowledge.py  papers.py  review.py  search.py  settings.py  socratic.py  streaming.py  verification.py  writing.py
backend/app/services/: citation_graph.py  citation_service.py  comparison_matrix.py  cost_estimator.py  crypto.py  format_service.py  latex_service.py  pdf_download.py  pdf_parser.py  proxy.py  s2_client.py  search_service.py  semantic_scholar_api.py  venue_service.py
backend/app/services/paper_sources/: __init__.py  arxiv.py  crossref.py  dblp.py  semanticscholar.py
backend/scripts/: migrate_keys.py
backend/templates/acl/: main.tex
backend/templates/ctex_article/: bibliography.bib  main.tex
backend/templates/ieee_trans/: main.tex
backend/templates/neurips_2024/: main.tex
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_health_router.py  test_ideas_router.py  test_knowledge_router.py  test_papers_router.py  test_search_router.py  test_settings_router.py  test_socratic_router.py  test_streaming_router.py  test_verification_router.py
backend/tests/unit/: test_arxiv_source.py  test_dblp_source.py  test_format_service.py  test_models.py  test_pdf_parser.py  test_proxy.py  test_s2_client.py  test_search_service.py  test_semantic_scholar_api.py  test_semanticscholar_source.py  test_venue_service.py
docs/: phase1-next-steps.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: AnnotationSummaryPanel.tsx  ChatPanel.tsx  DataManagement.tsx  Layout.tsx  PdfThumbnailBar.tsx  PdfToolbar.tsx  PdfViewer.tsx  Sidebar.tsx  (+2 more)
scripts/: build-backend.bat
(+18 files in other folders)
