[project]
name = "research-assistant-backend"
version = "0.1.0"
description = "全流程科研桌面助手后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "chromadb>=0.5.0",
    "arxiv>=2.1.0",
    "PyMuPDF>=1.24.0",
    "openai>=1.30.0",
    "langgraph>=0.2.0",
    "pydantic-settings>=2.3.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
precise = ["marker-pdf>=1.0.0"]
semantic = ["semanticscholar>=0.5.0"]
all = [
    "marker-pdf>=1.0.0",
    "semanticscholar>=0.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-username/research-assistant"

[tool.uv]
dev-dependencies = ["research-assistant-backend[dev]"]

[tool.ruff]
line-length = 100
target-version = "py311"

# 清华源
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
